# lfg.go

./: .gitignore  AGENTS.md  GEMINI.md  Makefile  NOTICE  README.md  adapter.go  auto-confidence.plan.md  auto-entropy.plan.md  backend.go  batch.go  build.zig  build.zig.zon  cgo_darwin_arm64.go  cgo_linux_amd64.go  cgo_linux_arm64.go  cgo_windows_amd64.go  chat.go  context.go  errors.go  generate.go  generate_loop.go  go.mod  lfg-macos-arm64  lfg.go  lfg_test.go  memory.go  model.go  options.go  perf.go  perf_throughput_test.go  purego_funcs.go  purego_lib.go  purego_strings.go  purego_structs.go  sampler.go  session.go  state.go  types.go  vocab.go  (+2 more)
.agent/rules/: comments.md  cpp-rules.md
docs/: cortext.md  online-learning.md
examples/: go.mod  go.sum  integration_test.go  main.go  main_test.go
scripts/: bench_apples.py  gen_metal_embed.py  test_leap_bundles.py
src/: CMakeLists.txt  main.cpp
src/benchmarks/: benchmark_healing_structured.cpp  benchmark_perf_compare.cpp  benchmark_tool_healing.cpp
src/cmake/: common.cmake  llama-config.cmake.in  llama.pc.in
src/eval/: bare_thinking_test.cpp  bench_confidence_overhead.cpp  bench_rewind.cpp  bench_tool_ranking.cpp  build-info.cpp  eval_bert_parity.cpp  eval_colbert_retrieval.cpp  eval_entropy_retrieval.cpp  lfg_structured_compare.cpp  license.cpp  llama_compare.cpp  llama_structured_compare.cpp  verify_thinking_structured.cpp
src/fuzz/: fuzz_chat_template.cpp
src/ggml/: CMakeLists.txt  ggml-cpu.h  ggml.c  ggml.h
src/ggml/ggml-cpu/: CMakeLists.txt  ggml-cpu.c  simd-mappings.h  vec.h
src/ggml/ggml-cpu/amx/: amx.cpp
src/ggml/ggml-cpu/llamafile/: sgemm.cpp
src/ggml/ggml-vulkan/: CMakeLists.txt
src/inference/: CMakeLists.txt  inference_core.h  json_schema_to_grammar.cpp  lfg_adapter.cpp  lfg_adapter.h  lfg_api.cpp  lfg_api.h  lfg_api.hpp  lfg_arch.cpp  lfg_batch.h  lfg_chat.cpp  lfg_chat.h  lfg_context.h  lfg_cparams.h  lfg_error.cpp  lfg_grammar.cpp  lfg_grammar.h  lfg_graph.cpp  lfg_graph.h  lfg_impl.cpp  lfg_inference.cpp  lfg_inference.h  lfg_kv_cache.cpp  lfg_kv_cache.h  lfg_kv_cache_iswa.cpp  lfg_kv_cache_iswa.h  lfg_kv_cells.h  lfg_memory.cpp  lfg_memory.h  lfg_memory_hybrid.cpp  lfg_mmap.cpp  lfg_model.cpp  lfg_model_loader.h  lfg_model_saver.cpp  lfg_model_saver.h  lfg_quant.cpp  lfg_sampler_prefix.cpp  lfg_sampling.cpp  lfg_vocab.cpp  lfg_vocab.h  (+26 more)
src/inference/models/: lfg_bert.h  lfg_lfm2.h  lfm_lfm2.h
src/loader/: model_loader.cpp  model_loader.h
src/tests/: CMakeLists.txt  test_c_api_errors.cpp  test_chat_first_message.cpp  test_chat_integration.cpp  test_checkpoint_state.cpp  test_checkpointing.cpp  test_entropy_monitor.cpp  test_generate_loop.cpp  test_guardrails.cpp  test_healing_integration.cpp  test_inference.cpp  test_json_schema_to_grammar.cpp  test_leap_bundle.cpp  test_lfm25_thinking_exhaustive_tooling.cpp  test_max_tokens_reasoning.cpp  test_model_capabilities.cpp  test_parity.cpp  test_reasoning_budget.cpp  test_reasoning_gate.cpp  test_reasoning_healing_integration.cpp  test_softmax_safety.cpp  test_structured_checkpointing.cpp  test_structured_double_accept.cpp  test_surprise_monitor.cpp  test_thinking_split.cpp  test_token_healing.cpp  test_tool_call_parser.cpp  test_tool_calling.cpp  test_tool_chat_integration.cpp  test_tool_injection.cpp
src/vision/: clip-graph.h
src/wasm/: wasm_bench.cpp
test_models/LFM2-1.2B-Extract-GGUF/: Q4_K_M.json  Q5_K_M.json  Q8_0.json
test_models/LFM2-1.2B-GGUF/: Q4_0.json  Q4_K_M.json  Q5_K_M.json  Q8_0.json
test_models/LFM2-1.2B-RAG-GGUF/: Q4_K_M.json  Q8_0.json
test_models/LFM2-1.2B-Tool-GGUF/: Q4_K_M.json  Q5_K_M.json  Q8_0.json
test_models/LFM2-2.6B-Exp-GGUF/: Q5_K_M.json  Q8_0.json
test_models/LFM2-2.6B-GGUF/: Q4_0.json  Q8_0.json
test_snapshots/: test_json_sampling.txt  test_leap_bundle.txt  test_model_capabilities.txt
tools/demo/: file_dialog.h  main.cpp
